# cosmo-app

./: AGENTS.md  CMakeLists.txt  README.md  cosmopolitan.cmake  vcpkg.json
.github/workflows/: build.yml
data/: sample.json
docs/: ARCHITECTURE.md  CONSTRAINTS.md
scripts/verify-standalone/: verify.sh
src/: embedded_resource.cpp  embedded_resource.h  logger.h  main.cpp  math_utils.cpp  math_utils.h
tests/: CMakeLists.txt  test_math_utils.cpp
